# FFTease3.0-MaxMSP

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Info.plist  LICENSE.md  README.md  package-info.json  package-info.json.in
Projects/: FFTease3.0.sln  all_builds.pl
bthresher~/: bthresh test1.maxpat  bthresh test2.maxpat  cpuload.maxpat
burrow~/: burrow~.c
cavoc27~/: cavoc27~.c
cavoc~/: cavoc~ safe.c
codepend~/: codepend~.c
cross~/: cross~.c
dentist~/: dentist~.c
disarrain~/: test disarray.maxpat  test vectors.maxpat
disarray~/: disarray~.c
enrich~/: enrich~ failed.c  enrich~ safe.c  enrich~.c
extras/: FFTease Overview.maxpat  FFTease.maxpat  FFtease.txt  Untitled.txt
help/: fftz.bthresher~.maxhelp  fftz.burrow~.maxhelp  fftz.cavoc27~.maxhelp  fftz.cavoc~.maxhelp  fftz.centerring~.maxhelp  fftz.codepend~.maxhelp  fftz.cross~.maxhelp  fftz.dentist~.maxhelp  fftz.disarrain~.maxhelp  fftz.disarray~.maxhelp  fftz.drown~.maxhelp  fftz.enrich~.maxhelp  fftz.ether~.maxhelp  fftz.leaker~.maxhelp  fftz.loopsea~.maxhelp  fftz.mindwarp~.maxhelp  fftz.morphine~.maxhelp  fftz.multyq~.maxhelp  fftz.pileup~.maxhelp  fftz.pvcompand~.maxhelp  fftz.pvgrain~.maxhelp  fftz.pvharm~.maxhelp  fftz.pvoc~.maxhelp  fftz.pvtuner~.maxhelp  fftz.pvwarpb~.maxhelp  fftz.pvwarp~.maxhelp  fftz.reanimator~.maxhelp  fftz.resent~.maxhelp  fftz.residency_buffer~.maxhelp  fftz.residency~.maxhelp  fftz.schmear~.maxhelp  fftz.scrape~.maxhelp  fftz.shapee~.maxhelp  fftz.swinger~.maxhelp  fftz.taint~.maxhelp  fftz.thresher~.maxhelp  fftz.vacancy~.maxhelp  fftz.xsyn~.maxhelp
javascript/: fftz.function.js
libfftease/: Makefile  PenroseOscil.h  READ ME.rtf  bloscbank.c  convert.c  fft.c  fftease.h  leanconvert.c  limit_fftsize.c  makewindows.c  overlapadd.c  qsortE.c  unconvert.c
media/: EL2bar120Simple.aif  ELDryGroove112.aif  GigaEx1.aif  GigaEx2.aif  GigaEx3.aif  GigaEx4.aif  GigaEx5.aif  Rubble.aif  i_am_the_edison.aif
misc/: fftease-objects.json
multyq~/: multyq~.c
pileup~/: pileup~.c  try pileup.maxpat
pvoc~/: pvoc~.c
pvtuner~/: pvtuner~.c
pvwarpb~/: pvwarpb~.c
pvwarp~/: pvwarp~.c
reanimator~/: reanimator~.c
resent~/: resent.maxpat
residency~/: cpuload.maxpat
schmear~/: schmear~.c
source/projects/multyq~/: CMakeLists.txt  multyq~.c
(+548 files in other folders)
